--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 #Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
-  secret_access_key: <%= ENV["AWS__SECRET_ACCESS_KEY"] %>
-  region: <%= ENV["AWS_REGION"] %>
-  bucket: <%= ENV["AWS_BUCKET"] %>
+  access_key_id: <%= Figaro.env.aws_access_key_id %>
+  secret_access_key: <%= Figaro.env.aws_secret_access_key %>
+  region: <%= Figaro.env.aws_region %>
+  bucket: <%= Figaro.env.aws_bucket %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
